--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styles": "^5.14.15",
     "@mui/x-date-pickers": "^6.16.3",
     "axios": "^1.5.1",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "next": "latest",
     "react": "latest",
