--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext", "ES6"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -13,6 +13,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    // "noImplicitAny": true,
+    // "noImplicitThis": true,
+    // "strictNullChecks": true,
     "plugins": [
       {
         "name": "next"
@@ -28,7 +31,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/app/application/ApplicationTable.tsx",
-    "src/app/application/page.jsx"
+    "src/app/application/page.jsx",
+    "src/app/layout.tsx"
   ],
   "exclude": ["node_modules"]
 }
